--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,18 +27,19 @@ dependencies = [
     "numpy",
     "pandas",
     "beautifulsoup4",
+    "markdownify",
     "langchain-core",
     "langchain-ollama",
     "langgraph",
     "langgraph.checkpoint.sqlite",
     "python-dotenv",
+    "lxml",
+    "PyYAML",
     "requests",
     "scikit-learn",
     "flask",
     "flask-cors",
     "chromadb",
-    "selenium",
-    "webdriver-manager",
 ]
 
 [project.urls]
