--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,109 +1,72 @@
-name: CI Pipeline (Test, Lint, Format, Coverage)
+name: Installing and Testing
+on: [push]
 
-on: [push, pull_request]
-
-# Set default permissions for the GITHUB_TOKEN.
+# https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
+# `contents` is for permission to the contents of the repository.
+# `pull-requests` is for permission to pull request
 permissions:
-  contents: read
+  contents: write
   checks: write
   pull-requests: write
 
-# Use uv, a much faster package installer
 env:
   UV_SYSTEM_PYTHON: true
 
 jobs:
-  # Job to run linting and formatting checks.
-  checks:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip # uv uses the same cache directory as pip
-          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-uv-
-
-      - name: Install dependencies with uv
-        run: uv pip install -e '.[dev]'
-
-      - name: Run Ruff Linter
-        run: ruff check src tests
-
-      - name: Run Ruff Formatter Check
-        run: ruff format --check src tests
-
-  # Job to run tests across multiple Python versions and report coverage
-  test-and-coverage:
+  install-and-test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        # Test on a matrix of Python versions for broader compatibility
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-
+        python_version: ["3.10", "3.11", "3.12"]
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip # uv uses the same cache directory as pip
-          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-uv-
-
-      # Install main dependencies, plus 'coveralls' only on the 3.12 job
-      - name: Install dependencies with uv
-        run: |
-          uv pip install -e '.[dev]'
-          if [[ "${{ matrix.python-version }}" == "3.12" ]]; then
-            uv pip install coveralls
-          fi
-
-      # Run tests on all versions. On 3.12, also generate the coverage report.
-      - name: Run tests with pytest
-        run: |
-          if [[ "${{ matrix.python-version }}" == "3.12" ]]; then
-            pytest --cov=src/desi/processor --junitxml=pytest.xml | tee pytest-coverage.txt
-          else
-            pytest
-          fi
-
-      # The following steps now ONLY run on the Python 3.12 job
-      - name: Post pytest coverage comment on PR
-        if: matrix.python-version == '3.12'
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
-
-      - name: Submit coverage report to Coveralls
-        if: matrix.python-version == '3.12'
-        # This is the simple, direct upload method from your old working file.
-        # NO parallel logic.
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          coveralls --service=github
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{matrix.python_version}}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{matrix.python_version}}
+    - name: Install uv
+      run: |
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        uv pip install -e '.[dev]'
+    # - name: mypy
+    #   run: |
+    #     python -m mypy --ignore-missing-imports --follow-imports=silent --no-strict-optional bam_masterdata tests
+    - name: Test with pytest
+      run: |
+        python -m pytest -sv --ignore=tests/cli --ignore=tests/metadata/test_entities_dict.py tests
+  build-and-install:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.12
+    - name: Install uv
+      run: |
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+    - name: Build the package
+      run: |
+        uv pip install build
+        python -m build --sdist
+    - name: Install the package
+      run: |
+        uv pip install dist/*.tar.gz
+  ruff-linting:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - uses: chartboost/ruff-action@v1
+          with:
+            args: "check ."
+  ruff-formatting:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - uses: chartboost/ruff-action@v1
+          with:
+            args: "format . --check --verbose"
