--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -1,4 +1,4 @@
-name: Installing and Testing
+name: Testing with coveralls Report
 on: [push]
 
 # https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
@@ -13,32 +13,7 @@ env:
   UV_SYSTEM_PYTHON: true
 
 jobs:
-  install-and-test:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python_version: ["3.10", "3.11", "3.12"]
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{matrix.python_version}}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{matrix.python_version}}
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        uv pip install -e '.[dev]'
-    # - name: mypy
-    #   run: |
-    #     python -m mypy --ignore-missing-imports --follow-imports=silent --no-strict-optional bam_masterdata tests
-    - name: Test with pytest
-      run: |
-        python -m pytest -sv --ignore=tests/cli --ignore=tests/metadata/test_entities_dict.py tests
-  build-and-install:
+  coveralls-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -49,24 +24,21 @@ jobs:
     - name: Install uv
       run: |
         curl -LsSf https://astral.sh/uv/install.sh | sh
-    - name: Build the package
+    - name: Install dependencies
       run: |
-        uv pip install build
-        python -m build --sdist
-    - name: Install the package
+        uv pip install -e '.[dev]'
+        uv pip install coveralls
+    - name: Build coverage file
       run: |
-        uv pip install dist/*.tar.gz
-  ruff-linting:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: chartboost/ruff-action@v1
-          with:
-            args: "check ."
-  ruff-formatting:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: chartboost/ruff-action@v1
-          with:
-            args: "format . --check --verbose"
+        pytest --cov-config=.coveragerc --junitxml=pytest.xml --cov=bam_masterdata tests | tee pytest-coverage.txt
+    - name: Pytest coverage comment
+      uses: MishaKav/pytest-coverage-comment@main
+      with:
+        pytest-coverage-path: pytest-coverage.txt
+        junitxml-path: pytest.xml
+    - name: Submit to coveralls
+      continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        coveralls --service=github
