--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,6 @@ jobs:
           uv pip install coveralls
       
       - name: Mypy Type Checking
-        # --- THE FIX IS HERE ---
-        # This step will now ONLY run on pull requests or on pushes to the main branch.
-        # It will be SKIPPED on pushes to feature branches.
         if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: |
           echo "Running Mypy because this is a pull request or a push to main..."
@@ -78,25 +75,25 @@ jobs:
         run: |
           coveralls --service=github
 
-  integration-tests:
-    name: Integration Tests
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: [linting-and-formatting, unit-tests-and-coverage]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
-      - name: Install uv
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Install dependencies
-        run: uv pip install -e '.[dev]'
-      - name: Run Integration Tests
-        run: |
-          python -m pytest -sv -m "integration" tests/
+  # integration-tests:
+  #   name: Integration Tests
+  #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  #   needs: [linting-and-formatting, unit-tests-and-coverage]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Set up Python 3.12
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: 3.12
+  #     - name: Install uv
+  #       run: |
+  #         curl -LsSf https://astral.sh/uv/install.sh | sh
+  #     - name: Install dependencies
+  #       run: uv pip install -e '.[dev]'
+  #     - name: Run Integration Tests
+  #       run: |
+  #         python -m pytest -sv -m "integration" tests/
 
   build-and-install:
     name: Build and Install
