--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,6 +140,10 @@ show_error_context = true
 follow_imports = "silent"
 disable_error_code = "import, annotation-unchecked"
 
+[[tool.mypy.overrides]]
+module = "torch.*"
+ignore_errors = true
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "-ra -q"
