--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,11 @@ jobs:
           uv pip install -e '.[dev]'
           uv pip install coveralls
       
-      - name: Mypy Type Checking
-        if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
-        run: |
-          echo "Running Mypy because this is a pull request or a push to main..."
-          python -m mypy --ignore-missing-imports --follow-imports=silent --no-strict-optional src/desi tests
+#      - name: Mypy Type Checking
+#        if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+#        run: |
+#          echo "Running Mypy because this is a pull request or a push to main..."
+#          python -m mypy --ignore-missing-imports --follow-imports=silent --no-strict-optional src/desi tests
 
       - name: Run Unit Tests & Build coverage file
         run: |
