--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,13 @@ dev = [
     "coveralls",
 ]
 
+docs = [
+  "mkdocs",
+  "mkdocs-material",
+  "mkdocstrings[python]",
+  "pymdown-extensions"
+]
+
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
 include = ["desi/*.py", "tests/*.py"]
